Added config window

--- a/styles/session_picker.qss
+++ b/styles/session_picker.qss
@@ -25,7 +25,7 @@ QLineEdit#CardInput:focus {
 
 QComboBox#ComboBox {
   border-radius: 4px;
-  padding: 4px 8px;
+  padding: 8px 16px 8px 12px;
   border: 1px solid #E0E0E0;
 }
 
@@ -34,5 +34,5 @@ QComboBox#ComboBox::drop-down:button{
 }
 
 QFrame#ComboBoxes {
-  border-bottom: 3px solid #E0E0E0;
+  /* border-bottom: 3px solid #E0E0E0; */
 }
