--- a/resources/styles/main.qss
+++ b/resources/styles/main.qss
@@ -1,25 +1,58 @@
+/* ============================================================
+   Color Palette
+   ============================================================ */
+/* Background: #04080B (dark navy) */
+/* Text: #D1D5DC (light gray) */
+/* Secondary: #828282 (medium gray) */
+/* Accent: #1E2A33 (hover state) */
+/* Handle: #B0B0B0 (light gray) */
+
+/* ============================================================
+   Base Styles
+   ============================================================ */
 QMainWindow, QWidget {
-  background-color: #FFFAFA;
-  color: #000;
-  font-family: Segoe UI;
-  /* border: 1px solid black; */
+  background-color: #04080B;
+  color: #D1D5DC;
 }
 
+#BorderFrame {
+  border: 1px solid #1E2A33;
+}
+
+/* ============================================================
+   Scroll Bars
+   ============================================================ */
 QScrollBar:horizontal, QScrollBar:vertical {
-    background: transparent;
-    border: none;
+  background: transparent;
+  border: none;
 }
 
 QScrollBar::handle {
-    background: #B0B0B0;
-    border-radius: 6px;
+  background: #B0B0B0;
+  border-radius: 6px;
 }
 
 QScrollBar::sub-line, QScrollBar::add-line {
-    height: 0px;
-    width: 0px;
+  height: 0px;
+  width: 0px;
 }
 
+/* ============================================================
+   Input Components
+   ============================================================ */
 QComboBox {
   color: #828282;
+}
+
+/* ============================================================
+   Buttons
+   ============================================================ */
+QToolButton {
+  background-color: transparent;
+  border: none;
+}
+
+QToolButton:hover {
+  background-color: #1E2A33;
+  border-radius: 4px;
 }
