--- a/resources/styles/dropdown.qss
+++ b/resources/styles/dropdown.qss
@@ -26,3 +26,7 @@ QPushButton#DropdownPopupItem:hover {
   border: 2px solid #1e2939;
   border-radius: 8px;
 }
+
+#DropdownPopupContainer {
+  background-color: transparent;
+}
