--- a/resources/styles/strategy_tab.qss
+++ b/resources/styles/strategy_tab.qss
@@ -8,3 +8,27 @@
 #TirePicker:hover {
   background-color: #2a373b;
 }
+
+#TirePopupContainer {
+  background-color: #202b2f;
+  border: 2px solid #1e2939;
+  border-radius: 8px;
+}
+
+QPushButton#TirePopupDropdown {
+  color: #FFFFFF;
+  background-color: #202b2f;
+  border: 2px solid #2a373b;
+  border-radius: 8px;
+  padding: 8px 12px 8px 12px;
+}
+
+QPushButton#TirePopupDropdown:hover {
+  background-color: #2a373b;
+}
+
+#TirePopupQuickSetButton {
+  color: #FFFFFF;
+  background-color: transparent;
+  border: none;
+}
