--- a/resources/styles/strategy_settings.qss
+++ b/resources/styles/strategy_settings.qss
@@ -5,3 +5,58 @@ QFrame#StrategySettingsFrame {
   border: 1px solid #1e2939;
   border-radius: 8px;
 }
+
+QFrame#StrategySettingsFrame > * {
+  background-color: transparent;
+  color: #ffffff;
+}
+
+QWidget {
+  background-color: transparent;
+}
+
+/* --- Checkboxes --- */
+QCheckBox {
+  padding-bottom: 1px;
+  color: #FFFFFF;
+  spacing: 8px;
+  background-color: #101f23;
+}
+
+QCheckBox::indicator {
+  width: 20px;
+  height: 20px;
+  border-radius: 6px;
+  background-color: #1D2A2C;
+  border: 1px solid #364153;
+}
+
+QCheckBox::indicator:hover {
+  background-color: #263638;
+  border: 1px solid #455a64;
+}
+
+QCheckBox::indicator:checked {
+  background-color: #05fd7e;
+  border: 1px solid #05fd7e;
+  image: url(resources/icons/race_config/check.svg);
+}
+
+QCheckBox::indicator:checked:hover {
+  background-color: #04e671;
+  border: 1px solid #04e671;
+}
+
+QCheckBox::indicator:disabled {
+  background-color: #151f22;
+  border: 1px solid #2a3942;
+}
+
+QCheckBox::indicator:checked:disabled {
+  background-color: #2a4a3b;
+  border: 1px solid #2a4a3b;
+}
+
+QCheckBox:disabled {
+  color: #747982;
+}
